--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,7 @@
-VITE_API_URL = "https://2636-125-161-89-49.ngrok-free.app"
-#VITE_API_URL = "http://localhost:3000"
+# VITE_API_URL = "https://2636-125-161-89-49.ngrok-free.app"
+VITE_API_URL = "http://localhost:3000"
 # APP API
 VITE_API_LOGIN ="/users/login"
 VITE_API_CEKLOGIN ="/users/isloggedin"
+VITE_API_REGISTER = "/users/register"
+VITE_API_MYINFO ="/users/myinfo"
