--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.6.5",
     "vue": "^3.2.47",
     "vue-router": "^4.2.1"
   },
