--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-# VITE_API_URL = "https://76c5-118-96-87-76.ngrok-free.app"
+# VITE_API_URL = "https://8e03-118-96-87-76.ngrok-free.app"
 VITE_API_URL = "http://localhost:3000"
 # APP API
 VITE_API_LOGIN ="/users/login"
@@ -20,3 +20,5 @@ VITE_POST_UPLOAD_INOVASI="/inovasi/submitdata"
 VITE_API_GET_ACC_INOVASI="/inovasi/get_acc"
 VITE_API_GET_EVENTS="/events/"
 VITE_API_POST_EVENTS="/events/create"
+VITE_API_PUT_EVENTS="/events/update"
+VITE_API_DELETE_EVENTS="/events/hapus"
