--- a/frontend/.env
+++ b/frontend/.env
@@ -5,6 +5,7 @@ VITE_API_LOGIN ="/users/login"
 VITE_API_LOGOUT="/users/logout"
 VITE_API_CEKLOGIN ="/users/isloggedin"
 VITE_API_REGISTER = "/users/register"
+VITE_API_FORGOT = "/users/forgotpassword"
 VITE_API_MYINFO ="/users/myinfo"
 VITE_API_GET_INOVASI="/inovasi/"
 VITE_API_GET_TAHAPAN = "/inovasi/tahapan"
@@ -22,3 +23,8 @@ VITE_API_GET_EVENTS="/events/"
 VITE_API_POST_EVENTS="/events/create"
 VITE_API_PUT_EVENTS="/events/update"
 VITE_API_DELETE_EVENTS="/events/hapus"
+VITE_API_GET_WINNERS="/winners/list"
+VITE_API_POST_WINNERS="/winners/create"
+VITE_API_PUT_WINNERS ="/winners/update"
+VITE_API_DELETE_WINNERS ="/winners/delete"
+VITE_API_GET_CONTACT="/contact/list"
