--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-VITE_API_URL = "https://772e-116-206-14-60.ngrok-free.app"
-# VITE_API_URL = "http://localhost:3000"
+VITE_API_URL = "https://cd7b-180-252-119-42.ngrok-free.app"
+##VITE_API_URL = "http://localhost:3000"
 # APP API
 VITE_API_LOGIN ="/users/login"
 VITE_API_LOGOUT="/users/logout"
@@ -18,6 +18,7 @@ VITE_API_GET_TEMAINOVASI="/inovasi/tema"
 VITE_POST_ACC_INOVASI ="/inovasi/acc_inovasi"
 VITE_GET_INOVASI_BY="/inovasi/getbyuser"
 VITE_POST_REJECT_INOVASI ="/inovasi/reject_inovasi"
+VITE_POST_EVALUASI_INOVASI ="/inovasi/evaluasi_inovasi"
 VITE_POST_UPLOAD_INOVASI="/inovasi/submitdata"
 VITE_API_GET_ACC_INOVASI="/inovasi/get_acc"
 VITE_API_GET_EVENTS="/events/"
